Fix broken links

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ code {
     });
   </script>
 <h1 id="joe">Joe</h1>
-<p>📍 🔗 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | 💻 <a href="https://github.com/binartist/about-me.git">GitHub</a></p>
+<p>📍 🔗 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | 💻 <a href="https://binartist.github.io/about-me/">GitHub</a></p>
 <hr>
 <h2 id="professional-summary">Professional Summary</h2>
 <p>Innovative IT professional with <strong>18+ years of experience</strong> in software engineering, system architecture, and applied AI. Specialized in building <strong>agentic AI systems</strong> that integrate LLMs, vector databases, and real-time enterprise applications. Strong background in <strong>enterprise IT</strong> (e-commerce, finance, logistics, EDI) combined with expertise in <strong>cloud-native and mobile platforms</strong>. Proven track record in <strong>international project leadership</strong>, bridging business and technology, and delivering high-impact, scalable solutions. <strong>Trilingual</strong>: English (fluent), Japanese (intermediate, JLPT N3), Chinese (native).</p>
@@ -407,17 +407,17 @@ code {
 <h2 id="professional-experience">Professional Experience</h2>
 <p><strong>Co-Founder / Technical Lead</strong> – SaasifyEase (Japan) – <em>2023–Present (part-time)</em></p>
 <ul>
-<li>Built a multi-tenant <strong>agentic AI + RAG SaaS platform</strong> (<a href="project-aihub.md">link</a>) with user/role admin, knowledge ingestion, retrieval workflows.</li>
+<li>Built a multi-tenant <strong>agentic AI + RAG SaaS platform</strong> (<a href="project-aihub.html">link</a>) with user/role admin, knowledge ingestion, retrieval workflows.</li>
 <li>Implemented <strong>financial filing analytics</strong> pipeline (SEC 13F): ingestion → normalization → embeddings → insights.</li>
-<li>Delivered an <strong>AI-driven restaurant ordering &amp; operations system</strong> (<a href="project-eatease.md">link</a>) with QR ordering, POS tablet, dual AI assistants, multilingual content automation.</li>
-<li>Created an <strong>experimental DevOps agent</strong> (<a href="project-deploybot.md">link</a>) enabling natural language deployment actions (build, patch, redeploy, log/metrics summarization).</li>
-<li>Shipped a <strong>localized e-commerce experience for China</strong> (<a href="project-glob_ecom.md">link</a>) using in-country mirrors, BFF token mediation, and edge content caching.</li>
-<li>Developed a <strong>pet industry omni-channel platform</strong> (<a href="project-pet_ecom.md">link</a>) unifying activities, content, and commerce.</li>
+<li>Delivered an <strong>AI-driven restaurant ordering &amp; operations system</strong> (<a href="project-eatease.html">link</a>) with QR ordering, POS tablet, dual AI assistants, multilingual content automation.</li>
+<li>Created an <strong>experimental DevOps agent</strong> (<a href="project-deploybot.html">link</a>) enabling natural language deployment actions (build, patch, redeploy, log/metrics summarization).</li>
+<li>Shipped a <strong>localized e-commerce experience for China</strong> (<a href="project-glob_ecom.html">link</a>) using in-country mirrors, BFF token mediation, and edge content caching.</li>
+<li>Developed a <strong>pet industry omni-channel platform</strong> (<a href="project-pet_ecom.html">link</a>) unifying activities, content, and commerce.</li>
 </ul>
 <p><strong>Application Architect &amp; Fullstack Developer</strong> – IBM China – <em>2015–2022</em></p>
 <ul>
-<li>Led <strong>China market localization</strong> for global e-commerce (performance, regulatory data residency, UX adaptation) (<a href="project-glob_ecom.md">link</a>).</li>
-<li>Designed <strong>agent-enhanced EDI onboarding</strong> (<a href="project-edi.md">link</a>): canonical schema mapping for EDIFACT/X12 reducing manual partner setup effort.</li>
+<li>Led <strong>China market localization</strong> for global e-commerce (performance, regulatory data residency, UX adaptation) (<a href="project-glob_ecom.html">link</a>).</li>
+<li>Designed <strong>agent-enhanced EDI onboarding</strong> (<a href="project-edi.html">link</a>): canonical schema mapping for EDIFACT/X12 reducing manual partner setup effort.</li>
 <li>Built <strong>Agentforce-based workflows</strong> assisting insurance reps with data capture, submission, compliance updates.</li>
 <li>Directed multi-cloud <strong>application &amp; data migrations</strong> and introduced <strong>DevSecOps practices</strong> (pipeline hardening, observability).</li>
 </ul>
