Add architectural diagrams

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ code {
 <p>📍 🔗 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | 💻 <a href="https://binartist.github.io/about-me/">GitHub</a></p>
 <hr>
 <h2 id="professional-summary">Professional Summary</h2>
-<p>Innovative IT professional with <strong>18+ years of experience</strong> in software engineering, system architecture, and applied AI. Specialized in building <strong>agentic AI systems</strong> that integrate LLMs, vector databases, and real-time enterprise applications. Strong background in <strong>enterprise IT</strong> (e-commerce, finance, logistics, EDI) combined with expertise in <strong>cloud-native and mobile platforms</strong>. Proven track record in <strong>international project leadership</strong>, bridging business and technology, and delivering high-impact, scalable solutions. <strong>Trilingual</strong>: English (fluent), Japanese (intermediate, JLPT N3), Chinese (native).</p>
+<p>Innovative IT leader with 18+ years designing cloud-native systems, enterprise integrations, and agentic AI solutions that combine LLMs, vector search, and real‑time apps. Proven track record delivering scalable e‑commerce, finance, and logistics platforms across international teams; fluent in English and Chinese, intermediate in Japanese.</p>
 <hr>
 <h2 id="core-skills">Core Skills</h2>
 <p><strong>AI &amp; Data</strong></p>
@@ -377,21 +377,22 @@ code {
 <li>LLM orchestration (LangChain, LangGraph, Salesforce Agentforce)</li>
 <li>Retrieval-Augmented Generation (RAG) with pgvector</li>
 <li>Embeddings, semantic similarity search, AI evaluation frameworks</li>
-<li>Applied AI in <strong>finance, e-commerce, and logistics</strong></li>
+<li>Applied AI in finance, e-commerce, and logistics</li>
 </ul>
 <p><strong>Fullstack &amp; DevOps</strong></p>
 <ul>
-<li>Python (FastAPI), Go, Node.js, Java</li>
+<li>Python, Go, TypeScript (Node.js), Java</li>
 <li>Databases: PostgreSQL, MySQL, MongoDB, Redis</li>
 <li>Frontend: React, SvelteKit; Mobile: Flutter</li>
 <li>Cloud &amp; DevOps: Docker, Kubernetes, AWS (EC2, ALB, S3, Aurora, CloudWatch, IAM), GCP, Azure</li>
-<li>CI/CD with GitHub Actions; built <strong>custom agentic AI assistants</strong> for automation</li>
+<li>CI/CD with GitHub Actions; AWS CDK; built custom agentic AI assistants for automation</li>
 </ul>
 <p><strong>Enterprise Integration &amp; Leadership</strong></p>
 <ul>
-<li>Large-scale API design, system integration, and modernization</li>
-<li>Architectural design and development leadership</li>
-<li><strong>Business–technology bridge</strong> across global teams and cultures</li>
+<li>Delivered global, cross-functional systems end-to-end</li>
+<li>Defined and governed large-scale APIs and canonical models</li>
+<li>Led migrations and modernization programs to cloud-native platforms</li>
+<li>Bridged cross-cultural stakeholders to align business and technical roadmaps</li>
 </ul>
 <hr>
 <h2 id="selected-projects">Selected Projects</h2>
@@ -400,37 +401,36 @@ code {
 <li><a href="project-eatease.html">Restaurant AI System</a> – QR ordering, dual AI assistants, multilingual ops</li>
 <li><a href="project-deploybot.html">DevOps Agent Tool</a> – conversational deployment &amp; diagnostics assistant</li>
 <li><a href="project-glob_ecom.html">Global E-commerce Localization</a> – in-country mirrors, BFF, edge caching</li>
-<li><a href="project-pet_ecom.html">Pet Industry Commerce Platform</a> – activity lifecycle digitization &amp; engagement</li>
-<li><a href="project-edi.html">EDI Onboarding System</a> – AI-assisted schema mapping &amp; partner acceleration</li>
+<li><a href="project-pet_ecom.html">Pet Industry Commerce Platform</a> – activity lifecycle digitization and engagement</li>
+<li><a href="project-edi.html">EDI Onboarding System</a> – AI-assisted schema mapping and partner acceleration</li>
 </ul>
 <hr>
 <h2 id="professional-experience">Professional Experience</h2>
 <p><strong>Co-Founder / Technical Lead</strong> – SaasifyEase (Japan) – <em>2023–Present (part-time)</em></p>
 <ul>
-<li>Built a multi-tenant <strong>agentic AI + RAG SaaS platform</strong> (<a href="project-aihub.html">link</a>) with user/role admin, knowledge ingestion, retrieval workflows.</li>
-<li>Implemented <strong>financial filing analytics</strong> pipeline (SEC 13F): ingestion → normalization → embeddings → insights.</li>
-<li>Delivered an <strong>AI-driven restaurant ordering &amp; operations system</strong> (<a href="project-eatease.html">link</a>) with QR ordering, POS tablet, dual AI assistants, multilingual content automation.</li>
-<li>Created an <strong>experimental DevOps agent</strong> (<a href="project-deploybot.html">link</a>) enabling natural language deployment actions (build, patch, redeploy, log/metrics summarization).</li>
-<li>Shipped a <strong>localized e-commerce experience for China</strong> (<a href="project-glob_ecom.html">link</a>) using in-country mirrors, BFF token mediation, and edge content caching.</li>
-<li>Developed a <strong>pet industry omni-channel platform</strong> (<a href="project-pet_ecom.html">link</a>) unifying activities, content, and commerce.</li>
+<li>Architected and launched a multi-tenant <strong>agentic AI + RAG SaaS platform</strong> (<a href="project-aihub.html">link</a>) with access controls, knowledge ingestion, and retrieval workflows.</li>
+<li>Built a <strong>financial filing analytics</strong> pipeline (SEC 13F): ingestion → normalization → embeddings → insights.</li>
+<li>Delivered an <strong>AI-driven restaurant ordering &amp; ops system</strong> (<a href="project-eatease.html">link</a>) integrating QR ordering, POS tablet, and dual AI assistants.</li>
+<li>Developed an <strong>experimental DevOps agent</strong> (<a href="project-deploybot.html">link</a>) for natural-language deployment and diagnostics (build, patch, redeploy, log summaries).</li>
+<li>Launched a <strong>pet-industry omni-channel platform</strong> (<a href="project-pet_ecom.html">link</a>) unifying activities, content, and commerce.</li>
 </ul>
 <p><strong>Application Architect &amp; Fullstack Developer</strong> – IBM China – <em>2015–2022</em></p>
 <ul>
-<li>Led <strong>China market localization</strong> for global e-commerce (performance, regulatory data residency, UX adaptation) (<a href="project-glob_ecom.html">link</a>).</li>
-<li>Designed <strong>agent-enhanced EDI onboarding</strong> (<a href="project-edi.html">link</a>): canonical schema mapping for EDIFACT/X12 reducing manual partner setup effort.</li>
-<li>Built <strong>Agentforce-based workflows</strong> assisting insurance reps with data capture, submission, compliance updates.</li>
-<li>Directed multi-cloud <strong>application &amp; data migrations</strong> and introduced <strong>DevSecOps practices</strong> (pipeline hardening, observability).</li>
+<li>Led China localization for <strong>global e-commerce</strong>: performance tuning, data residency, and UX adaptation (<a href="project-glob_ecom.html">link</a>).</li>
+<li>Designed an <strong>agent-driven EDI onboarding</strong> platform (<a href="project-edi.html">link</a>) that automated canonical mapping for EDIFACT/X12.</li>
+<li>Implemented <strong>Agentforce</strong> workflows to assist insurance reps with data capture and compliance updates.</li>
+<li>Directed <strong>multi-cloud</strong> migrations and introduced <strong>DevSecOps</strong> practices (pipeline hardening, observability).</li>
 </ul>
 <p><strong>Software Engineer</strong> – Mahong Network Tech – <em>2007–2014</em></p>
 <ul>
-<li>Developed cross-platform consumer mobile apps (feature phone → early smartphone transition).</li>
-<li>Contributed to internal mobile framework components improving reuse and time-to-market.</li>
-<li>Strengthened fundamentals: performance tuning, UI optimization, lifecycle &amp; release discipline.</li>
+<li>Built cross-platform mobile apps during the transition from feature phones to smartphones.</li>
+<li>Contributed reusable mobile framework components to accelerate releases.</li>
+<li>Focused on performance tuning, UI optimization, and release process improvements.</li>
 </ul>
 <hr>
 <h2 id="education">Education</h2>
 <ul>
-<li><strong>Bachelor Degree in Electronics of Science and Technology</strong> – Huazhong University of Science and Technologys, 2007</li>
+<li>Bachelor Degree in Electronics of Science and Technology – Huazhong University of Science and Technologys, 2007</li>
 </ul>
 <hr>
 <h2 id="certifications">Certifications</h2>
