--- a/project-aihub.html
+++ b/project-aihub.html
@@ -372,6 +372,79 @@ code {
 <p>End users — such as employees, partners, or customers — can seamlessly access a web portal equipped with a conversational AI chat interface. This empowers them to query company-specific knowledge, receive context-aware responses, and execute automated tasks through agentic workflows.</p>
 <p>By combining knowledge management, secure access control, and intelligent chat-based interaction, the platform enhances enterprise decision-making, customer support, and operational efficiency.</p>
 <h2 id="architecture">Architecture</h2>
+<pre><code class="language-mermaid"><div class="mermaid">flowchart LR
+	subgraph Admin
+		AdminPortal[Admin Console]
+		TenantConfig[Tenant Config Service]
+	end
+
+	subgraph Ingestion
+		Intake[Document Intake API]
+		Parsers[Parsers & Enrichment]
+		Pipeline[Ingestion Orchestrator]
+	end
+
+	subgraph Knowledge
+		ObjectStore[Content Repository]
+		Metadata[Metadata Catalog]
+		VectorDB[Vector Store]
+	end
+
+	subgraph Runtime
+		Auth[Identity & RBAC]
+		Portal[End-user Portal]
+		Gateway[BFF / Request Gateway]
+		Retrieval[Retrieval Service]
+		Orchestrator[Agent Orchestrator]
+		Tools[Tool / API Connectors]
+		Audit[Audit & Policy Engine]
+	end
+
+	AdminPortal --> TenantConfig
+	TenantConfig --> Pipeline
+	Intake --> Parsers --> Pipeline
+	Pipeline --> ObjectStore
+	Pipeline --> Metadata
+	Pipeline --> VectorDB
+
+	Portal --> Gateway
+	Gateway --> Auth
+	Auth --> TenantConfig
+	Gateway --> Retrieval
+	Retrieval --> VectorDB
+	Retrieval --> ObjectStore
+	Orchestrator --> Retrieval
+	Orchestrator --> Tools
+	Tools --> Orchestrator
+	Orchestrator --> Gateway
+	Audit --> Orchestrator
+	Audit --> Tools
+	Gateway --> Audit
+	Metadata --> Retrieval
+
+	classDef admin fill:#f0f8ff,stroke:#1f4a82,stroke-width:1px;
+	classDef ingest fill:#fff4e6,stroke:#b36b00,stroke-width:1px;
+	classDef knowledge fill:#f2fff0,stroke:#2d6b1f,stroke-width:1px;
+	classDef runtime fill:#fef0f6,stroke:#a61f5a,stroke-width:1px;
+	class AdminPortal,TenantConfig admin;
+	class Intake,Parsers,Pipeline ingest;
+	class ObjectStore,Metadata,VectorDB knowledge;
+	class Auth,Portal,Gateway,Retrieval,Orchestrator,Tools,Audit runtime;
+</div></code></pre>
+<h3 id="component-responsibilities">Component responsibilities</h3>
+<ul>
+<li>Admin Console &amp; Tenant Config: Self-service setup for org admins to manage tenants, users, roles, knowledge bases, and guardrail policies.</li>
+<li>Document Intake API &amp; Parsers: Accept bulk uploads or connectors (SharePoint, CRM, SIS), normalize documents, extract metadata, and generate embeddings.</li>
+<li>Ingestion Orchestrator: Schedules crawls, deduplicates content, tracks provenance, and pushes normalized assets into storage and the vector index.</li>
+<li>Content Repository &amp; Metadata Catalog: Persist canonical documents with versioning, metadata, and access control flags for retrieval filtering.</li>
+<li>Vector Store: Stores embeddings with tenant segmentation, supporting similarity search with metadata filters.</li>
+<li>Identity &amp; RBAC: Multi-tenant auth, SSO integration, and fine-grained permissions controlling user and agent access to content and tools.</li>
+<li>End-user Portal &amp; BFF/Gateway: Delivers chat UX, handles localization, mediates requests, and enforces rate limits and session policies.</li>
+<li>Retrieval Service: Performs hybrid search (vector + keyword), applies metadata filters, and returns source-cited context for prompts.</li>
+<li>Agent Orchestrator: Manages agentic workflows, tool selection, guardrails, and response assembly; handles multi-step plans with fallback to humans.</li>
+<li>Tool / API Connectors: Adapters to enterprise systems (CRM, SIS, ticketing, calendar) with policy-aware execution and throttling.</li>
+<li>Audit &amp; Policy Engine: Monitors agent/tool actions, enforces compliance rules (PII redaction, approval workflow), records immutable audit trails.</li>
+</ul>
 <h2 id="use-case">Use Case</h2>
 <p>An international education company receives thousands of customer queries every day about university entrance requirements, qualification equivalencies, program recommendations, application deadlines, and required documentation. Questions come from prospective students across multiple countries and languages, and often require consulting institution-specific policies, national qualification frameworks, and historical admissions decisions to provide accurate guidance.</p>
 <p>Using the platform, student-facing teams and customers can get fast, context-aware answers backed by authoritative sources. RAG (Retrieval-Augmented Generation) surfaces precise passages from institutional handbooks, country regulations, and prior case notes. Agentic flows then orchestrate downstream actions such as computing eligibility, assembling a personalized application checklist, generating pre-filled forms, scheduling an advising session, or initiating escalation to a human counselor when the request is ambiguous or sensitive.</p>
