--- a/project-glob_ecom.html
+++ b/project-glob_ecom.html
@@ -370,6 +370,76 @@ code {
 <h2 id="introduction">Introduction</h2>
 <p>A global direct‑selling cosmetics company operates in China and must leverage existing global IT services while improving experience for region‑specific users. The goal: reuse global assets (identity, product master, order management) yet deliver locally performant, culturally aligned interfaces and compliant data handling.</p>
 <h2 id="architecture">Architecture</h2>
+<pre><code class="language-mermaid"><div class="mermaid">flowchart LR
+	subgraph Global Core
+		GlobalIdP[Global Identity Provider]
+		MasterData[Product & Inventory Master]
+		OrderSys[Global Order Management]
+		GlobalCMS[Global CMS]
+	end
+
+	subgraph Integration Layer
+		APIHub[Global API Gateway]
+		Queue[Cross-border Queue]
+		SyncJobs[Content & Data Sync Jobs]
+	end
+
+	subgraph China Region
+		BFF[BFF / API Composer]
+		Mobile[Localized Mobile/Web Apps]
+		EdgeCache[Regional CDN / Edge Cache]
+		CatalogCN[In-country Catalog & Pricing Cache]
+		IdentityCN[Regional Profile Store]
+		DataLakeCN[Operational Data Mart]
+	end
+
+	subgraph Compliance & Ops
+		Audit[Audit / Monitoring]
+		Consent[Consent & Privacy Service]
+	end
+
+	Mobile --> BFF
+	BFF --> EdgeCache
+	EdgeCache --> CatalogCN
+	BFF --> CatalogCN
+	BFF --> IdentityCN
+	BFF --> OrderSys
+	BFF --> MasterData
+
+	GlobalCMS --> SyncJobs --> EdgeCache
+	MasterData --> APIHub --> CatalogCN
+	OrderSys --> Queue --> BFF
+	GlobalIdP --> BFF
+	IdentityCN --> Consent
+	Audit --> GlobalIdP
+	Audit --> BFF
+	DataLakeCN --> Audit
+
+	classDef global fill:#f0f4ff,stroke:#1f3c88,stroke-width:1px;
+	classDef china fill:#f5fff0,stroke:#2f6b1d,stroke-width:1px;
+	classDef integration fill:#fff7e6,stroke:#a05a00,stroke-width:1px;
+	classDef compliance fill:#fef0f0,stroke:#a63232,stroke-width:1px;
+	class GlobalIdP,MasterData,OrderSys,GlobalCMS global;
+	class APIHub,Queue,SyncJobs integration;
+	class BFF,Mobile,EdgeCache,CatalogCN,IdentityCN,DataLakeCN china;
+	class Audit,Consent compliance;
+</div></code></pre>
+<h3 id="component-responsibilities">Component responsibilities</h3>
+<ul>
+<li>Global Identity Provider: Centralized authentication authority that issues tokens; supports federated sign-on for consultants/customers.</li>
+<li>Product &amp; Inventory Master / Order Management: Remain the system of record for inventory levels and order lifecycle; expose APIs consumed cross-region.</li>
+<li>Global CMS: Source-of-truth for product and marketing content that drives periodic syncs to the regional cache.</li>
+<li>Global API Gateway &amp; Cross-border Queue: Secure outbound integration path and idempotent write-through queue to route mutations back to global systems.</li>
+<li>Content &amp; Data Sync Jobs: Scheduled/event-driven processes that hydrate regional caches (catalog, assets) and purge stale data.</li>
+<li>BFF / API Composer: China-hosted service composing responses from local caches plus global APIs; manages token refresh, localization, and throttling.</li>
+<li>Localized Mobile/Web Apps: China-friendly front end (localized UX patterns, payment integrations) calling the BFF with short-lived tokens.</li>
+<li>Regional CDN / Edge Cache: Serves static assets and high-frequency payloads locally to minimize cross-border latency.</li>
+<li>In-country Catalog &amp; Pricing Cache: Low-latency read store for product, pricing, and inventory views; syncs back to the system of record via queue.</li>
+<li>Regional Profile Store: Holds China-specific profile, consent, and personalization data to satisfy residency rules while referencing global IDs.</li>
+<li>Operational Data Mart: Aggregates usage, order insights, and consultant analytics within region; powers localized reporting.</li>
+<li>Consent &amp; Privacy Service: Manages opt-ins, data minimization, and regulatory reporting for regional data handling.</li>
+<li>Audit / Monitoring: Unifies observability across global and regional services, capturing SLA metrics and compliance audit trails.</li>
+</ul>
 <h2 id="use-case">Use Case</h2>
 <p>Large and active customer base in China reports persistent issues:</p>
 <ul>
