Update LinkedIn link

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ code {
     });
   </script>
 <h1 id="joe">Joe</h1>
-<p>📍 🔗 <a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | 💻 <a href="https://binartist.github.io/about-me/">GitHub</a></p>
+<p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 💻 <a href="https://binartist.github.io/about-me/">CV</a></p>
 <hr>
 <h2 id="professional-summary">Professional Summary</h2>
 <p>Innovative IT leader with 18+ years designing cloud-native systems, enterprise integrations, and agentic AI solutions that combine LLMs, vector search, and real‑time apps. Proven track record delivering scalable e‑commerce, finance, and logistics platforms across international teams; fluent in English and Chinese, intermediate in Japanese.</p>
@@ -414,7 +414,7 @@ code {
 <li>Developed an <strong>experimental DevOps agent</strong> (<a href="project-deploybot.html">link</a>) for natural-language deployment and diagnostics (build, patch, redeploy, log summaries).</li>
 <li>Launched a <strong>pet-industry omni-channel platform</strong> (<a href="project-pet_ecom.html">link</a>) unifying activities, content, and commerce.</li>
 </ul>
-<p><strong>Application Architect &amp; Fullstack Developer</strong> – IBM China – <em>2015–2022</em></p>
+<p><strong>Application Architect &amp; Fullstack Developer</strong> – IBM China – <em>Present</em></p>
 <ul>
 <li>Led China localization for <strong>global e-commerce</strong>: performance tuning, data residency, and UX adaptation (<a href="project-glob_ecom.html">link</a>).</li>
 <li>Designed an <strong>agent-driven EDI onboarding</strong> platform (<a href="project-edi.html">link</a>) that automated canonical mapping for EDIFACT/X12.</li>
@@ -430,7 +430,7 @@ code {
 <hr>
 <h2 id="education">Education</h2>
 <ul>
-<li>Bachelor Degree in Electronics of Science and Technology – Huazhong University of Science and Technologys, 2007</li>
+<li>Bachelor Degree in Electronics of Science and Technology – Huazhong University of Science and Technologys, 2003~2007</li>
 </ul>
 <hr>
 <h2 id="certifications">Certifications</h2>
