--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ code {
     });
   </script>
 <h1 id="joe">Joe</h1>
-<p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 💻 <a href="https://binartist.github.io/about-me/">CV</a></p>
+<p>📍 🔗 <a href="https://www.linkedin.com/in/mi-zhou-46553092/">LinkedIn</a> | 💻 <a href="https://binartist.github.io/about-me/">This CV</a></p>
 <hr>
 <h2 id="professional-summary">Professional Summary</h2>
 <p>Innovative IT leader with 18+ years designing cloud-native systems, enterprise integrations, and agentic AI solutions that combine LLMs, vector search, and real‑time apps. Proven track record delivering scalable e‑commerce, finance, and logistics platforms across international teams; fluent in English and Chinese, intermediate in Japanese.</p>
