update the summary

--- a/index.html
+++ b/index.html
@@ -406,26 +406,26 @@ code {
 </ul>
 <hr>
 <h2 id="professional-experience">Professional Experience</h2>
-<p><strong>Co-Founder / Technical Lead</strong> – SaasifyEase (Japan) – <em>2023–Present (part-time)</em></p>
-<ul>
-<li>Architected and launched a multi-tenant <strong>agentic AI + RAG SaaS platform</strong> (<a href="project-aihub.html">link</a>) with access controls, knowledge ingestion, and retrieval workflows.</li>
-<li>Built a <strong>financial filing analytics</strong> pipeline (SEC 13F): ingestion → normalization → embeddings → insights.</li>
-<li>Delivered an <strong>AI-driven restaurant ordering &amp; ops system</strong> (<a href="project-eatease.html">link</a>) integrating QR ordering, POS tablet, and dual AI assistants.</li>
-<li>Developed an <strong>experimental DevOps agent</strong> (<a href="project-deploybot.html">link</a>) for natural-language deployment and diagnostics (build, patch, redeploy, log summaries).</li>
-<li>Launched a <strong>pet-industry omni-channel platform</strong> (<a href="project-pet_ecom.html">link</a>) unifying activities, content, and commerce.</li>
-</ul>
 <p><strong>Application Architect &amp; Fullstack Developer</strong> – IBM China – <em>Present</em></p>
 <ul>
-<li>Led China localization for <strong>global e-commerce</strong>: performance tuning, data residency, and UX adaptation (<a href="project-glob_ecom.html">link</a>).</li>
-<li>Designed an <strong>agent-driven EDI onboarding</strong> platform (<a href="project-edi.html">link</a>) that automated canonical mapping for EDIFACT/X12.</li>
-<li>Implemented <strong>Agentforce</strong> workflows to assist insurance reps with data capture and compliance updates.</li>
-<li>Directed <strong>multi-cloud</strong> migrations and introduced <strong>DevSecOps</strong> practices (pipeline hardening, observability).</li>
+<li>Led <strong>China localization for global e-commerce platforms</strong>, optimizing performance, data residency compliance, and regional UX adaptations (<a href="project-glob_ecom.html">project link</a>).</li>
+<li>Designed an <strong>agent-assisted EDI onboarding platform</strong>, automating canonical mapping for EDIFACT/X12 via AI-driven schema normalization (<a href="project-edi.html">project link</a>).</li>
+<li>Developed <strong>Agentforce workflows</strong> enabling insurance representatives to automate data capture, form validation, and regulatory updates.</li>
+<li>Directed <strong>multi-cloud migrations</strong> and implemented <strong>DevSecOps practices</strong>, improving security, observability, and CI/CD pipeline reliability.</li>
+</ul>
+<p><strong>Co-Founder / Technical Lead</strong> – SaasifyEase (Japan) – <em>2023–Present (Part-time, concurrent with IBM)</em></p>
+<ul>
+<li>Architected and launched a <strong>multi-tenant Agentic AI + RAG SaaS platform</strong> with access control, workspace isolation, knowledge ingestion, and retrieval orchestration (<a href="project-aihub.html">project link</a>).</li>
+<li>Built an end-to-end <strong>financial filings analytics pipeline</strong> (SEC 13F): ingestion → normalization → embeddings → portfolio insights (<a href="project-finance.html">project link</a>).</li>
+<li>Delivered an <strong>AI-driven restaurant ordering &amp; operations system</strong>, integrating QR ordering, POS tablet flows, and dual AI assistants for users and staff (<a href="project-eatease.html">project link</a>).</li>
+<li>Created an experimental <strong>DevOps AI agent (DeployBot)</strong> enabling natural-language deployment operations — build, patch, redeploy, and log summaries (<a href="project-deploybot.html">project link</a>).</li>
+<li>Launched a <strong>pet-industry omni-channel platform</strong>, unifying content, activities, and commerce with AI-powered engagement tools (<a href="project-pet_ecom.html">project link</a>).</li>
 </ul>
 <p><strong>Software Engineer</strong> – Mahong Network Tech – <em>2007–2014</em></p>
 <ul>
-<li>Built cross-platform mobile apps during the transition from feature phones to smartphones.</li>
-<li>Contributed reusable mobile framework components to accelerate releases.</li>
-<li>Focused on performance tuning, UI optimization, and release process improvements.</li>
+<li>Built cross-platform mobile applications during the transition from feature phones to iOS/Android.</li>
+<li>Contributed reusable mobile framework modules to accelerate application delivery.</li>
+<li>Specialized in <strong>UI optimization</strong>, <strong>performance tuning</strong>, and iterative release process improvements.</li>
 </ul>
 <hr>
 <h2 id="education">Education</h2>
